[gd_scene load_steps=8 format=3 uid="uid://coo6an2qhahif"]

[ext_resource type="LabelSettings" uid="uid://m48ou1arcktr" path="res://Global/ui_heading.tres" id="1_aato4"]
[ext_resource type="Texture2D" uid="uid://b5f2orsf3cano" path="res://textures/Mobs/Mobs+Idle Movement/ShadowWraith2.png" id="1_d5g4i"]
[ext_resource type="Script" path="res://Global/monManagerSc.gd" id="1_rfgsr"]
[ext_resource type="Texture2D" uid="uid://6hqxyqcaal32" path="res://textures/Mobs/Firewolf_Evo_2.tres" id="2_oramg"]
[ext_resource type="LabelSettings" uid="uid://bvrkgbk0n2lkp" path="res://Global/ui_regular.tres" id="4_ru1gb"]
[ext_resource type="Texture2D" uid="uid://b7ahodrtnbkpr" path="res://test_sprites/fireball_lol.png" id="5_010gr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u34gh"]
bg_color = Color(0.227451, 0.160784, 0.129412, 1)

[node name="monManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rfgsr")

[node name="monsterPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 132.0
offset_top = 55.0
offset_right = 1016.0
offset_bottom = 585.0
theme_override_styles/panel = SubResource("StyleBoxFlat_u34gh")

[node name="VBoxContainer" type="VBoxContainer" parent="monsterPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="Label" parent="monsterPanel/VBoxContainer"]
layout_mode = 2
text = "Monster Inventory"
label_settings = ExtResource("1_aato4")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="monsterPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="monsterPanel/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 4

[node name="Box1" type="VBoxContainer" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/GridContainer/Box1"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_oramg")
expand_mode = 1
stretch_mode = 5

[node name="Button" type="Button" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/GridContainer/Box1"]
layout_mode = 2
text = "Fire Wolf"

[node name="Box2" type="VBoxContainer" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/GridContainer/Box2"]
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="Button" type="MenuButton" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/GridContainer/Box2"]
layout_mode = 2
focus_mode = 2
disabled = true
text = "
"
flat = false
item_count = 2
popup/item_0/text = "Switch"
popup/item_0/id = 1
popup/item_1/text = "Inspect"
popup/item_1/id = 1

[node name="Box3" type="VBoxContainer" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/GridContainer/Box3"]
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="Button" type="MenuButton" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/GridContainer/Box3"]
layout_mode = 2
focus_mode = 2
disabled = true
text = "
"
flat = false
item_count = 2
popup/item_0/text = "Switch"
popup/item_0/id = 1
popup/item_1/text = "Inspect"
popup/item_1/id = 1

[node name="Box4" type="VBoxContainer" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/GridContainer/Box4"]
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="Button" type="MenuButton" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/GridContainer/Box4"]
layout_mode = 2
focus_mode = 2
disabled = true
text = "
"
flat = false
item_count = 2
popup/item_0/text = "Switch"
popup/item_0/id = 1
popup/item_1/text = "Inspect"
popup/item_1/id = 1

[node name="Box5" type="VBoxContainer" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/GridContainer/Box5"]
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="Button" type="MenuButton" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/GridContainer/Box5"]
layout_mode = 2
focus_mode = 2
disabled = true
text = "
"
flat = false
item_count = 2
popup/item_0/text = "Switch"
popup/item_0/id = 1
popup/item_1/text = "Inspect"
popup/item_1/id = 1

[node name="Box6" type="VBoxContainer" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/GridContainer/Box6"]
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="Button" type="MenuButton" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/GridContainer/Box6"]
layout_mode = 2
focus_mode = 2
disabled = true
text = "
"
flat = false
item_count = 2
popup/item_0/text = "Switch"
popup/item_0/id = 1
popup/item_1/text = "Inspect"
popup/item_1/id = 1

[node name="Box7" type="VBoxContainer" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/GridContainer/Box7"]
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="Button" type="MenuButton" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/GridContainer/Box7"]
layout_mode = 2
focus_mode = 2
disabled = true
text = "
"
flat = false
item_count = 2
popup/item_0/text = "Switch"
popup/item_0/id = 1
popup/item_1/text = "Inspect"
popup/item_1/id = 1

[node name="Box8" type="VBoxContainer" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/GridContainer/Box8"]
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="Button" type="MenuButton" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/GridContainer/Box8"]
layout_mode = 2
focus_mode = 2
disabled = true
text = "
"
flat = false
item_count = 2
popup/item_0/text = "Switch"
popup/item_0/id = 1
popup/item_1/text = "Inspect"
popup/item_1/id = 1

[node name="Box9" type="VBoxContainer" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/GridContainer/Box9"]
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="Button" type="MenuButton" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/GridContainer/Box9"]
layout_mode = 2
focus_mode = 2
disabled = true
text = "
"
flat = false
item_count = 2
popup/item_0/text = "Switch"
popup/item_0/id = 1
popup/item_1/text = "Inspect"
popup/item_1/id = 1

[node name="Box10" type="VBoxContainer" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/GridContainer/Box10"]
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="Button" type="MenuButton" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/GridContainer/Box10"]
layout_mode = 2
focus_mode = 2
disabled = true
text = "
"
flat = false
item_count = 2
popup/item_0/text = "Switch"
popup/item_0/id = 1
popup/item_1/text = "Inspect"
popup/item_1/id = 1

[node name="Box11" type="VBoxContainer" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/GridContainer/Box11"]
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="Button" type="MenuButton" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/GridContainer/Box11"]
layout_mode = 2
focus_mode = 2
disabled = true
text = "
"
flat = false
item_count = 2
popup/item_0/text = "Switch"
popup/item_0/id = 1
popup/item_1/text = "Inspect"
popup/item_1/id = 1

[node name="Box12" type="VBoxContainer" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/GridContainer/Box12"]
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="Button" type="MenuButton" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/GridContainer/Box12"]
layout_mode = 2
focus_mode = 2
disabled = true
text = "
"
flat = false
item_count = 2
popup/item_0/text = "Switch"
popup/item_0/id = 1
popup/item_1/text = "Inspect"
popup/item_1/id = 1

[node name="Display" type="MarginContainer" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 15

[node name="displayMain" type="VBoxContainer" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/Display"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/Display/displayMain"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 2
texture = ExtResource("1_d5g4i")
expand_mode = 1
stretch_mode = 5

[node name="Name" type="Label" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/Display/displayMain"]
layout_mode = 2
text = "Shadow Wraith"
label_settings = ExtResource("4_ru1gb")
horizontal_alignment = 1

[node name="LevelClass" type="Label" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/Display/displayMain"]
layout_mode = 2
text = "Level 1 Mage"
label_settings = ExtResource("4_ru1gb")
horizontal_alignment = 1

[node name="displayStats" type="GridContainer" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/Display/displayMain"]
layout_mode = 2
columns = 2

[node name="HPlabel" type="Label" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/Display/displayMain/displayStats"]
layout_mode = 2
size_flags_horizontal = 3
text = "HP:"
label_settings = ExtResource("4_ru1gb")
horizontal_alignment = 1

[node name="HP" type="Label" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/Display/displayMain/displayStats"]
layout_mode = 2
size_flags_horizontal = 3
text = "80 / 120
"
label_settings = ExtResource("4_ru1gb")

[node name="MPlabel" type="Label" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/Display/displayMain/displayStats"]
layout_mode = 2
size_flags_horizontal = 3
text = "MP:"
label_settings = ExtResource("4_ru1gb")
horizontal_alignment = 1

[node name="MP" type="Label" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/Display/displayMain/displayStats"]
layout_mode = 2
size_flags_horizontal = 3
text = "900"
label_settings = ExtResource("4_ru1gb")

[node name="DMGlabel" type="Label" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/Display/displayMain/displayStats"]
layout_mode = 2
size_flags_horizontal = 3
text = "ATP:"
label_settings = ExtResource("4_ru1gb")
horizontal_alignment = 1

[node name="dmg" type="Label" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/Display/displayMain/displayStats"]
layout_mode = 2
size_flags_horizontal = 3
text = "900"
label_settings = ExtResource("4_ru1gb")

[node name="Abilities" type="HBoxContainer" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/Display/displayMain"]
layout_mode = 2
size_flags_vertical = 3

[node name="Ability1" type="VBoxContainer" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/Display/displayMain/Abilities"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/Display/displayMain/Abilities/Ability1"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("5_010gr")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/Display/displayMain/Abilities/Ability1"]
layout_mode = 2
text = "Ability 1"
label_settings = ExtResource("4_ru1gb")
horizontal_alignment = 1

[node name="Ability2" type="VBoxContainer" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/Display/displayMain/Abilities"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/Display/displayMain/Abilities/Ability2"]
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/Display/displayMain/Abilities/Ability2"]
layout_mode = 2
text = "Ability 2"
label_settings = ExtResource("4_ru1gb")
horizontal_alignment = 1

[node name="Ability3" type="VBoxContainer" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/Display/displayMain/Abilities"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/Display/displayMain/Abilities/Ability3"]
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="monsterPanel/VBoxContainer/MarginContainer/HBoxContainer/Display/displayMain/Abilities/Ability3"]
layout_mode = 2
text = "Ability 3"
label_settings = ExtResource("4_ru1gb")
horizontal_alignment = 1
